v7/tree-sitter-dl7/test/corpus/0_prefix_syntax.txt
==================
Prefix syntax
==================

(: Pair (* (: left int)))
(: Ledger (* (: (Key "account" PrimaryKeyOptions) int)))
(User: (* (id: int)))
((Key "account" PrimaryKeyOptions): int)
(<- (copy ?Value ?_) (source ?Value))
((Pair User) Order)
"hello\nworld"
'spot
-12
-12abc
'a'b
()
{ (function_item name: (identifier) @name) (#match? @name "^get\\}") }

---

(source_file
  (parenthesized_expression
    (bare_token)
    (bare_token)
    (parenthesized_expression
      (bare_token)
      (parenthesized_expression
        (bare_token)
        (bare_token)
        (bare_token))))
  (parenthesized_expression
    (bare_token)
    (bare_token)
    (parenthesized_expression
      (bare_token)
      (parenthesized_expression
        (bare_token)
        (parenthesized_expression
          (bare_token)
          (string_literal)
          (bare_token))
        (bare_token))))
  (parenthesized_expression
    (bare_token)
    (parenthesized_expression
      (bare_token)
      (parenthesized_expression
        (bare_token)
        (bare_token))))
  (parenthesized_expression
    (parenthesized_expression
      (bare_token)
      (string_literal)
      (bare_token))
    (bare_token)
    (bare_token))
  (parenthesized_expression
    (bare_token)
    (parenthesized_expression
      (bare_token)
      (bare_token)
      (bare_token))
    (parenthesized_expression
      (bare_token)
      (bare_token)))
  (parenthesized_expression
    (parenthesized_expression
      (bare_token)
      (bare_token))
    (bare_token))
  (string_literal)
  (bare_token)
  (bare_token)
  (bare_token)
  (bare_token)
  (parenthesized_expression)
  (query_literal))
